<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/skillcinema_logo_description"
        android:src="@drawable/logo_skillcinema" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        app:indicatorColor="@color/blue"
        app:indicatorSize="80dp" />

    <LinearLayout
        android:id="@+id/error_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/start_end_margin"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/view_loader_error_message"
            android:textAppearance="@style/TitleTextStyle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/middle_gap"
            android:orientation="horizontal"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/loader_view_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ButtonStyle"
                android:backgroundTint="@color/blue"
                android:text="@string/view_loader_back_button"
                app:icon="@drawable/icon_caret_left" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/loader_view_refresh_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ButtonStyle"
                android:backgroundTint="@color/blue"
                android:text="@string/loader_refresh_button"
                android:layout_marginStart="10dp"
                app:icon="@drawable/icon_caret_left" />
        </LinearLayout>
    </LinearLayout>


    <ImageView
        android:id="@+id/loader_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/middle_gap"
        android:contentDescription="@string/image_loader_description" />
</RelativeLayout>
